--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -27,6 +27,7 @@ en:
       courses: Courses
       lecturers: Lecturers
       locations: Locations
+      customers: Customers
     attributes:
       courses:
         topic: Title
@@ -57,6 +58,14 @@ en:
         region: Region
         name: Name
         description: Description
+
+      customers:
+        id_no: Id
+        name: Name
+        email: Email
+        phone: Phone
+        corporate: Corporate
+        company_id: Company
 
   courses:
     list: Course Listing
@@ -104,6 +113,18 @@ en:
     region: Region
     name: Name
     description: Description
+
+  customers:
+    list: Customer Listing
+    title: Customer Details
+    new: New Customer
+    edit: Edit Customer
+    id_no: Id
+    name: Name
+    email: Email
+    phone: Phone no
+    corporate: Corporate
+    company_id: Company
 
   helpers:
     links:
