--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -22,14 +22,30 @@
 en:
   hello: "Hello world"
 
+  main_menu:
+    course: Course
+    people: People
+    facilities: Facilities
+    reports: Reports
+    payments: Payments
+
   activerecord:
     models:
-      courses: Courses
-      lecturers: Lecturers
-      locations: Locations
-      customers: Customers
+      course: Courses
+      lecturer: Lecturers
+      schedule: Scheduling
+      location: Locations
+      customer: Customers
+      company: Client Companies
+      payment: Payments
+      booking: Bookings
+
     attributes:
-      courses:
+      course:
+        list: Course Listing
+        title: Course Details
+        new: New Course
+        edit: Edit Course
         topic: Title
         code: Code
         category: Category
@@ -38,7 +54,11 @@ en:
         fee: Fee
         duration: Duration
 
-      lecturers:
+      lecturer:
+        list: Lecturer Listing
+        title: Lecturer Details
+        new: New Lecturer
+        edit: Edit Lecturer
         name: Name
         mykadno: MyKad No
         rate: Rate
@@ -46,20 +66,33 @@ en:
         address: Address
         qualifications: Qualifications
         experiences: Experiences
+        rate_currency: In Ringgit Malaysia (RM)
 
-      schedules:
+      schedule:
+        list: Schedule Listing
+        title: Schedule Details
+        new: New Schedule
+        edit: Editing Schedule
         course_id: Course
         scheduled_on: Scheduled on
         location_id: Location
         lecturer_id: Lecturer
         max_people: Max participant
         
-      locations:
+      location:
+        list: Location Listting
+        title: Location Details
+        new: New Location
+        edit: Edit Location
         region: Region
         name: Name
         description: Description
 
-      customers:
+      customer:
+        list: Customer Listing
+        title: Customer Details
+        new: New Customer
+        edit: Edit Customer
         id_no: Id
         name: Name
         email: Email
@@ -67,7 +100,11 @@ en:
         corporate: Corporate Client
         company_id: Company
         
-      companies:
+      company:
+        list: Company Listing
+        title: Company Details
+        new: New Company
+        edit: Edit Company
         company_code: Company Code
         name: Name
         address: Address
@@ -75,7 +112,11 @@ en:
         email: Email
         fax: Fax No
        
-      payments:
+      payment:
+        list: Payment Listing
+        title: Payment Details
+        new: New Payment
+        edit: Edit Payment
         booking_id: Booking
         customer_id: Customer
         method: Method
@@ -83,96 +124,27 @@ en:
         amount: Amount
         confirmed_by: Confirmed by
         confirmed_on: Confirmed on
+        
+      booking:
+        list: Booking Listing
+        title: Booking Details
+        new: New Booking
+        edit: Edit Booking
+        code: Code
+        schedule_id: Schedule
+        customer_id: Customer
+        payment_id: Payment
+        warranty_id: Warranty
 
-  courses:
-    list: Course Listing
-    title: Course Details
-    new: New Course
-    edit: Editing Course
-    code: Code
-    category: Category
-    topic: Title
-    description: Description
-    fee: Fee
-    duration: Duration
-
-  
-  lecturers:
-    list: Lecturer Listing
-    title: Lecturer Details
-    new: New Lecturer
-    edit: Editing Lecturer
-    name: Name
-    mykadno: MyKad No
-    rate: Rate
-    position: Position
-    address: Address
-    qualifications: Qualifications
-    experiences: Experiences
-    rate_currency: In Ringgit Malaysia (RM)
-    
-  schedules:
-    list: Schedule Listing
-    title: Schedule Details
-    new: New Schedule
-    edit: Editing Schedule
-    course_id: Course
-    scheduled_on: Schedule on
-    location_id: Location
-    lecturer_id: Lecturer
-    max_people: Max participant
-    
-  locations:
-    list: Location Listing
-    title: Location Details
-    new: New Location
-    edit: Edit Location
-    region: Region
-    name: Name
-    description: Description
-
-  customers:
-    list: Customer Listing
-    title: Customer Details
-    new: New Customer
-    edit: Edit Customer
-    id_no: Id
-    name: Name
-    email: Email
-    phone: Phone no
-    corporate: Corporate Client
-    company_id: Company
-
-  companies:
-    list: Company Listing
-    title: Company Details
-    new: New Company
-    edit: Edit Company
-    company_code: Company Code
-    name: Name
-    address: Address
-    phone: Phone No
-    email: Email
-    fax: Fax No
-
-  payments:
-    list: Payment Listing
-    title: Payment Details
-    new: New Payment
-    edit: Edit Payment
-    booking_id: Booking
-    customer_id: Customer
-    method: Method
-    auth_code: Auth Code
-    amount: Amount
-    confirmed_by: Confirmed by
-    confirmed_on: Confirmed on
 
   helpers:
     links:
       new: Create
+      edit: Edit
+      destroy: Destroy
       back: Back
       submit: Submit
+      cancel: Cancel
     user_id: User 
     college_id: College
     data: Data
@@ -180,6 +152,10 @@ en:
     select_company: Select Company
 
   actions:
+    new: New
+    show: Show
+    edit: Edit
+    delete: Delete
     search: Search
     all_records: All records
     yes: Yes
