--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -145,6 +145,9 @@ en:
       back: Back
       submit: Submit
       cancel: Cancel
+      about: About
+      contact: Contact
+      news: News
     user_id: User 
     college_id: College
     data: Data
