--- a/config/locales/ms_MY.yml
+++ b/config/locales/ms_MY.yml
@@ -124,6 +124,9 @@ ms_MY:
       back: Terdahulu
       submit: Hantar
       cancel: Batal
+      about: Tentang Kami
+      contact: Hubungi Kami
+      news: Berita
     user_id: Pengguna
     college_id: Kolej
     data: Data
