Fix rate not exist

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -80,7 +80,7 @@ en:
         max_people: Max participant
         
       location:
-        list: Location Listting
+        list: Location Listing
         title: Location Details
         new: New Location
         edit: Edit Location
