--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -35,7 +35,7 @@ en:
       lecturer: Lecturers
       schedule: Scheduling
       location: Locations
-      customer: Customers
+      customer: Customers / Participants
       company: Client Companies
       payment: Payments
       booking: Bookings
@@ -61,23 +61,27 @@ en:
         edit: Edit Lecturer
         name: Name
         mykadno: MyKad No
+        phone: Phone No
+        email: Email
         rate: Rate
         position: Position
         address: Address
         qualifications: Qualifications
         experiences: Experiences
         rate_currency: In Ringgit Malaysia (RM)
+        armed_force_no_mykad: or Armed Forced No
 
       schedule:
         list: Schedule Listing
         title: Schedule Details
         new: New Schedule
-        edit: Editing Schedule
+        edit: Edit Schedule
         course_id: Course
         scheduled_on: Scheduled on
         location_id: Location
         lecturer_id: Lecturer
         max_people: Max participant
+        participants: Participants
         
       location:
         list: Location Listing
@@ -89,16 +93,18 @@ en:
         description: Description
 
       customer:
-        list: Customer Listing
-        title: Customer Details
-        new: New Customer
-        edit: Edit Customer
-        id_no: Id
+        list: Customer / Participant Listing
+        title: Customer / Participant Details
+        new: New Customer / Participant
+        edit: Edit Customer / Participant
+        id_no: MyKad No
         name: Name
         email: Email
         phone: Phone
         corporate: Corporate Client
         company_id: Company
+        position: Position
+        armed_force_no_mykad: or Armed Forced No
         
       company:
         list: Company Listing
