new/edit revised

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -154,6 +154,7 @@ en:
       about: About
       contact: Contact
       news: News
+      add_participant: Save & Add Participant
     user_id: User 
     college_id: College
     data: Data
