--- a/config/locales/ms_MY.yml
+++ b/config/locales/ms_MY.yml
@@ -133,6 +133,7 @@ ms_MY:
       about: Tentang Kami
       contact: Hubungi Kami
       news: Berita
+      add_participant: Simpan & Tambah Peserta
     user_id: Pengguna
     college_id: Kolej
     data: Data
