--- a/config/locales/devise.ms_MY.yml
+++ b/config/locales/devise.ms_MY.yml
@@ -10,13 +10,15 @@ ms_MY:
       unauthenticated: 'Anda harus mendaftar atau sign in sebelum meneruskan .'
       unconfirmed: 'Anda harus melakukan proses pengesahan sebalum meneruskan.'
       locked: 'Akun anda terkunci.'
-      invalid: 'email atau password yang anda masukkan salah.'
+      invalid: 'Email atau password yang anda masukkan salah.'
       invalid_token: 'Kesalahan pada authentication token.'
       timeout: 'Sesi anda telah tamat, silahkan sign in bagi meneruskan sesi yang baru.'
-      inactive: 'Akun anda belum diaktifkan.'
+      inactive: 'Akaun anda belum diaktifkan.'
     sessions:
-      signed_in: 'Proses sign in berjaya.'
-      signed_out: 'Proses sign out berjaya.'
+      #signed_in: 'Proses sign in berjaya.'
+      #signed_out: 'Proses sign out berjaya.'
+      signed_in: ""
+      signed_out: ""
     passwords:
       send_instructions: 'Anda akan menerima e-mail mengenai langkah mengubah password sebentar lagi.'
       updated: 'Password anda telah berjaya diubah. Anda telah sign in.'
